Added a warning if SpatialPolygons are used as observations that all BAUs are assumed to be of equal area.

--- a/vignettes/FRK_bib.bib
+++ b/vignettes/FRK_bib.bib
@@ -106,6 +106,7 @@ Davis T. , 2011. http://www.cise.ufl.edu/research/sparse/SuiteSparse, Online: La
   author={Lindgren, Finn and Rue, H{\aa}vard},
   journal={Journal of Statistical Software},
   volume={63},
+  pages={1--25},
   year={2015}
 }
 
